objects/PSS_Subtech_Product__c.object
<CustomObject>
    <fields>
        <fullName>product_1__c</fullName>
        <description>Extended dependant products based on Sub technology</description>
        <label>product_1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>product_2__c</fullName>
        <label>product 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>product_3__c</fullName>
        <label>product 3</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>product__c</fullName>
        <description>Dependant products based on sub technology</description>
        <label>product</label>
        <type>TextArea</type>
    </fields>
    <customSettingsType>List</customSettingsType>
    <description>Depenadant pick list values of Product based on Sub technology</description>
    <label>PSS_Subtech_Product</label>
</CustomObject>